ドキュメントの修正
Former-commit-id: 85e80baf5c43c3b35a1fcc97f65548b8fb447405

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -2483,6 +2483,7 @@ p2=0～65535(0)</pre>
 			<tr><td>array</td><td>変数(配列あり)</td></tr>
 			<tr><td>str</td><td>文字列</td></tr>
 			<tr><td>double</td><td>実数値</td></tr>
+			<tr><td>label</td><td>ラベル</td></tr>
 			<tr><td>local</td><td>ローカル変数</td></tr>
 		</table>
 		<p>
