HSP3.5サンプルスクリプトの追加 treeset.pngの追加
Former-commit-id: 9bf6c807522fb6681169adf357fe5cbb86e9f447

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -26,13 +26,14 @@
 			<li><a href="#INSTALL">インストール</a></li>
 			<li><a href="#UNINSTALL">アンインストール</a></li>
 			<li><a href="#DEMO">デモンストレーション</a></li>
-			<li><a href="#CHANGE31">HSP3.1からの変更点</a></li>
+			<li><a href="#CHANGE31">HSP3.4からの変更点</a></li>
 			<li><a href="#CHANGE2">HSP2からの変更点</a></li>
 			<li><a href="#EDITOR">スクリプトエディタ</a></li>
 			<li><a href="#HSPAT">HSPアシスタント</a></li>
 			<li><a href="#BROWSER">HSPTVブラウザ</a></li>
 			<li><a href="#HDL">HSP Document Library(HDL)</a></li>
 			<li><a href="#SUPPORT">HSPのサポート</a></li>
+			<li><a href="#RECENT">最新版の提供について</a></li>
 			<li><a href="#USERCOM">HSPユーザーコミュニティ</a></li>
 			<li><a href="#LICENCE">HSPによって作られたソフトウェアのライセンスについて</a></li>
 			<li><a href="#COPYRIGHT">著作権、ライセンスについて</a></li>
@@ -53,14 +54,15 @@
 			HSPには、次のような特長があります。
 		</p>
 		<ul>
-			<li>簡単に覚えられる強力な命令セットと付属エディタにより初心者でもすぐに使い始めることができます</li>
+			<li>オールインワンの開発環境ですぐに使い始めることができます</li>
+			<li>簡単に覚えられる命令セットにより初心者でも扱えます</li>
 			<li>作ったプログラムは実行ファイルに変換して自由に再配布が可能、ライセンス料も不要です</li>
 			<li>拡張プラグイン・モジュールにより3D表示や通信など数多くの機能を追加可能です</li>
-			<li>10年以上に渡る多くのユーザー資産と使用実績があります</li>
+			<li>20年以上に渡る多くのユーザー資産と使用実績があります</li>
 			<li>詳細なマニュアルとリファレンスヘルプシステムを装備しています</li>
 			<li>純国産のツールとして書籍資料なども豊富です</li>
-			<li>マウス操作によりスクリプトを作成する簡易プログラミングシステムを利用できます</li>
-			<li>同梱されたHSPLetのJava変換機能によりWEBブラウザ上でも動作させることができます</li>
+			<li>HSP3Dishの変換機能により作成したソフトをandroid,iOS,Linux,WEBブラウザ(html5)上で動作させることができます</li>
+			<li>USB-IO、Arduinoなどハードウェア制御のためのライブラリを同梱しています</li>
 			<li>インタプリタ動作仕様はオープンソースとして公開されています</li>
 		</ul>
 		<p>
@@ -107,9 +109,20 @@
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
-			WEBブラウザ上でHSPスクリプトを動作させる仕組みを提供する「HSPLet」などを備えた、
+			ユーザーが作成したコンテンツを楽しめる「HSPTVブラウザ」などを備えた、
 			初心者から上級者まで、あらゆる場面で幅広く使うことのできる統合的な開発環境となっています。
 		</p>
+		<p>
+			HSP3.5から、新しくLinuxのGUI環境(X Window System)及びRaspberry Pi(Raspbian Jessie)で動作するバージョンが提供されています。
+			HSP3 for Linux/Raspberry Piは、簡易スクリプトエディタとHSP3Dish/HGIMG4実行環境を含む
+			プレビュー版として別なパッケージで公開されており、今後さらに機能が追加される予定です。
+			詳しくは、以下のページをご覧ください。
+			最新版の入手及び、インストール方法についても説明されています。
+		</p>
+		<dl>
+			<dt>HSP3 for Linux/Raspberry Pi</dt>
+			<dd><p><a href="http://hsp.tv/make/hsp3linux_pi.html" target="_blank">http://hsp.tv/make/hsp3linux_pi.html</a></p></dd>
+		</dl>
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
@@ -285,6 +298,21 @@
 		</p>
 		<address>e-mail  : hsp@onionsoft.net</address>
 
+		<h2 id="RECENT">最新版の提供について</h2>
+		<p>
+			開発中の最新β版は、随時OneDriveでも公開されています。
+			「ダウンロード」から全体のアーカイブを取得可能です。<br>
+			β版は、新規の機能や修正を検証するためのテストバージョンです。思わぬ不具合の可能性もあることをご了承下さい。
+			不具合が起こる場合や、動作が安定しない時は、以前のバージョンに戻して使用することを推奨します。
+		</p>
+		<dl>
+			<dt>HSPβ版(OneDrive)</dt>
+			<dd>
+				<p><a href="https://onedrive.live.com/embed?cid=EC425522ED849DA7&resid=EC425522ED849DA7%211229&authkey=AB-pNztAqBp6BcU" target="_blank">https://onedrive.live.com/embed?cid=EC425522ED849DA7&resid=EC425522ED849DA7%211229&authkey=AB-pNztAqBp6BcU</a></p>
+			</dd>
+		</dl>
+
+
 		<h2 id="USERCOM">HSPユーザーコミュニティ</h2>
 		<p>
 			HSPユーザー同士の意見や情報の交換、サポートなども活発に行なわれています。
@@ -303,6 +331,10 @@
 			<dt>HSPWiKi（誰でも書き込めるHSPに関するWiKi）</dt>
 			<dd>
 				<p><a href="http://quasiquote.org/hspwiki/" target="_blank">http://quasiquote.org/hspwiki/</a></p>
+			</dd>
+			<dt>HSP開発WiKi</dt>
+			<dd>
+				<p><a href="https://wiki.hsp.moe/" target="_blank">https://wiki.hsp.moe/</a></p>
 			</dd>
 		</dl>
 
@@ -377,16 +409,18 @@
 		<p>
 			追加コンポーネントは、開発の補助と利便性を高める要素で以下の項目を指します。
 			追加コンポーネントの著作権とライセンスは、それぞれ権利者が異なります。
-			詳しくは、以下に示されたドキュメントを参照してください。
+			詳しくは、それぞれのドキュメントを参照してください。
 		</p>
 		<ul>
-			<li>HSPLet (hspletフォルダ内のreadme.txtを参照)</li>
 			<li>HSP Document Library (doclib/HSP Document Libraryフォルダ内のreadme.txtを参照)</li>
 			<li>d3module (doclibフォルダ内のd3module.txtを参照)</li>
+			<li>Artlet2D (doclibフォルダ内のArtlet2D.txtを参照)</li>
+			<li>SQLele (doclibフォルダ内のSQLele.txtを参照)</li>
 			<li>OBAQプラグイン (doclibフォルダ内のobaq.txtを参照)</li>
 			<li>HSPDXプラグイン (doclibフォルダ内のhspdx.txtを参照)</li>
 			<li>HSPCVプラグイン (doclibフォルダ内のhspcv.txtを参照)</li>
 			<li>HGIMG3プラグイン (doclibフォルダ内のhgimg3.txtを参照)</li>
+			<li>HGIMG4プラグイン (doclibフォルダ内のhgimg4.txtを参照)</li>
 			<li>HSPOGGプラグイン (doclibフォルダ内のhspogg.txtを参照)</li>
 			<li>HSP3IMPプラグイン(doclibフォルダ内のhsp3imp.txtを参照)</li>
 		</ul>
@@ -398,20 +432,25 @@
 			onion softwareが著作権を主張することはありません。
 		</p>
 		<ul>
+			<li>HSPTV素材データ(/hsptv)及びそのサンプルスクリプト</li>
 			<li>HGIMGプラグイン (hgimg.dll、hgimgx.dll)及びそのサンプルスクリプト</li>
 			<li>HSPDAプラグイン (hspda.dll)及びそのサンプルスクリプト</li>
 			<li>HSPDBプラグイン (hspdb.dll)及びそのサンプルスクリプト</li>
 			<li>HSPEXTプラグイン (hspext.dll)及びそのサンプルスクリプト</li>
 			<li>HSPSOCKプラグイン (hspsock.dll)及びそのサンプルスクリプト</li>
 			<li>HSPINETプラグイン (hspinet.dll)及びそのサンプルスクリプト</li>
+			<li>HSPPRINTプラグイン (hspprint.dll)及びそのサンプルスクリプト</li>
 			<li>HSP基本サンプルスクリプト(sample/basicフォルダ内のスクリプト)</li>
 			<li>COMサンプルスクリプト(sample/comobjフォルダ内のスクリプト)</li>
 			<li>ゲームサンプルスクリプト(sample/gameフォルダ内のスクリプト)</li>
 			<li>HGIMGサンプルスクリプト(sample/hgimgフォルダ内のスクリプト)</li>
 			<li>HGIMG3サンプルスクリプト(sample/hgimg3フォルダ内のスクリプト)</li>
+			<li>HGIMG4サンプルスクリプト(sample/hgimg4フォルダ内のスクリプト)</li>
 			<li>HSPCLサンプルスクリプト(sample/hspclフォルダ内のスクリプト)</li>
-			<li>HSP新規サンプルスクリプト(sample/newフォルダ内のスクリプト)</li>
-			<li>HSPCLサンプルスクリプト(sample/hspclフォルダ内のスクリプト)</li>
+			<li>HSP3.4サンプルスクリプト(sample/new34フォルダ内のスクリプト)</li>
+			<li>HSP新規サンプルスクリプト(sample/new35フォルダ内のスクリプト)</li>
+			<li>HSP3UTFサンプルスクリプト(sample/hsp3utfフォルダ内のスクリプト)</li>
+			<li>HSP3Dishサンプルスクリプト(sample/hsp3dishフォルダ内のスクリプト)</li>
 			<li>スクリーンセーバーサンプルスクリプト(sample/ssaverフォルダ内のスクリプト)</li>
 			<li>HSPプログラミングマニュアル等HSPの各種技術資料(doclib/hspsdkフォルダ内)</li>
 		</ul>
@@ -421,7 +460,7 @@
 		</p>
 		<ul>
 			<li>HSPデモンストレーションのデータファイル(sample/demoフォルダ内のデータ)</li>
-i>
+
 		</ul>
 
 		<h2 id="LANG_SPEC">言語仕様の管理について</h2>
@@ -541,7 +580,7 @@ i>
 			hsp3dish.js(Emscripten版)は、zakkiさん、K-sさんが製作されたものをベースに実装させていただきました。
 		</p>
 		<p>
-			HSPLetは、山田 雄己(Yuki)さんが製作されたものを同梱させていただきました。
+			HSPLetは、山田 雄己(Yuki)さんが製作されたものをご提供いただきました。
 		</p>
 		<p>
 			HSPUSBIOプラグインは、K-K(瓶詰堂)さんが製作されたものを同梱させていただきました。
