--- a/package/win32/doclib/hsptv_res.htm
+++ b/package/win32/doclib/hsptv_res.htm
@@ -69,6 +69,8 @@
 	<a href="../hsptv/tamane_b4.png">tamane_b4.png</a>
 	<a href="../hsptv/tamane_b5.png">tamane_b5.png</a>
 	<a href="../hsptv/tamane_b6.png">tamane_b6.png</a>
+	<a href="../hsptv/tamane_b7.png">tamane_b7.png</a>
+	<a href="../hsptv/tamane_b8.png">tamane_b8.png</a>
 	<a href="../hsptv/tamane_s.png">tamane_s.png</a>
 	<a href="../hsptv/tamane_s1.png">tamane_s1.png</a>
 	<a href="../hsptv/tamane_s2.png">tamane_s2.png</a>
@@ -76,7 +78,10 @@
 	<a href="../hsptv/tamane_s4.png">tamane_s4.png</a>
 	<a href="../hsptv/tamane_s5.png">tamane_s5.png</a>
 	<a href="../hsptv/tamane_s6.png">tamane_s6.png</a>
+	<a href="../hsptv/tamane_s7.png">tamane_s7.png</a>
+	<a href="../hsptv/tamane_s8.png">tamane_s8.png</a>
 	<a href="../hsptv/tcard.png">tcard.png</a>
+	<a href="../hsptv/treeset.png">treeset.png</a>
 		</pre>
 
 
