--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -136,6 +136,11 @@
 
 		</dl>
 
+		<p>
+		HSP3.5で追加された新機能を手軽に試すことができるサンプルスクリプトが、「sample/new35」フォルダに含まれています。
+		ぜひ新しいサンプルでの動作を、実際に実行してお試しください。
+		</p>
+
 
 		<h2 id="DIFF34">HSP3.5の変更点について</h2>
 		<p>
