ドキュメントの修正 [HGIMG4] event_setang,event_ang命令が実行できない不具合を修正 [HSP3Dish][Windows] mmvol命令に-1000以下を指定しても反映されない不具合を修正
Former-commit-id: f77f548e03534c210e495cac144e1a047e5885de

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -34,6 +34,7 @@
 			<li><a href="#HDL">HSP Document Library(HDL)</a></li>
 			<li><a href="#SUPPORT">HSPのサポート</a></li>
 			<li><a href="#RECENT">最新版の提供について</a></li>
+			<li><a href="#ROADMAP">今後の予定</a></li>
 			<li><a href="#USERCOM">HSPユーザーコミュニティ</a></li>
 			<li><a href="#LICENCE">HSPによって作られたソフトウェアのライセンスについて</a></li>
 			<li><a href="#COPYRIGHT">著作権、ライセンスについて</a></li>
@@ -296,7 +297,7 @@
 			HSPについての一般的な質問や、スクリプトの作り方に関するご質問は、
 			ネット上のFAQや、書籍などでも情報を提供していますので、まず調べてみることをお勧め致します。
 		</p>
-		<address>e-mail  : hsp@onionsoft.net</address>
+		<p><dl>e-mail  : <address>hsp@onionsoft.net</address></dl></p>
 
 		<h2 id="RECENT">最新版の提供について</h2>
 		<p>
@@ -309,6 +310,39 @@
 			<dt>HSPβ版(OneDrive)</dt>
 			<dd>
 				<p><a href="https://onedrive.live.com/embed?cid=EC425522ED849DA7&resid=EC425522ED849DA7%211229&authkey=AB-pNztAqBp6BcU" target="_blank">https://onedrive.live.com/embed?cid=EC425522ED849DA7&resid=EC425522ED849DA7%211229&authkey=AB-pNztAqBp6BcU</a></p>
+			</dd>
+		</dl>
+
+
+		<h2 id="ROADMAP">今後の予定</h2>
+		<p>
+			より手軽に、アイデアを短時間で形にできる環境を目指して、今後もHSP3の開発は続けられます。<br>
+			多くの要望と不具合の報告を頂いたものの中から、実装できるものを順次取り入れていきたいと考えています。
+			今後の予定と、将来の検討事項などは以下の通りです。
+		</p>
+		<dl>
+			<dt>HSP3.6</dt>
+			<dd>
+			<p>
+			HSP3.5で導入できなかった機能については、引き続きアップデート版を更新していきます。
+			今後導入する予定として検討されている機能は、以下の通りです。(この順番で行われるということではありません。)
+			</p>
+			<dl>
+			<li>packfileの刷新、暗号化機能の見直し
+			<li>HSPスクリプトエディタの修正と入力・デバッグ支援の拡充
+			<li>Windows版HSP3Dish、hsp3mt、HGIMG4、x64ランタイムのUTF-8化
+			<li>モジュール機能の整理と拡充
+			<li>HSP描画バッファの32bit対応と高速化
+			<li>ネット接続を利用したコードや素材の共有、コミュニティの支援
+			</dl>
+			</dd>
+			<dt>HSP4</dt>
+			<dd>
+			<p>
+			HSP2が登場したのが1997年、HSP3はその8年後になりますが、時代の変化とともに次の世代に繋げることができればと考えています。
+			プログラミングに求められている状況も変わってきています。HSPの手軽さを継承した上で、ある程度互換性をカットして使いやすいものを、この先ロードマップとして発表していければと思っています。<br>
+			現在検討しているのは、完全なUTF-8、64bit対応、コード自動解析と学習機能、VMの刷新(llvmなど)、ネイティブコンパイル(JIT)などになります。
+			</p>
 			</dd>
 		</dl>
 
@@ -327,6 +361,10 @@
 			<dt>hsp-devメーリングリスト（HSP周辺ツール開発協力者のためのメーリングリスト）</dt>
 			<dd>
 				<p><a href="http://chatblanc.net/hsp-users/hsp-dev/" target="_blank">http://chatblanc.net/hsp-users/hsp-dev/</a></p>
+			</dd>
+			<dt>HSPバグトラック (不具合の報告、進捗のチェックなど)</dt>
+			<dd>
+				<p><a href="http://dev.onionsoft.net/mantis/" target="_blank">http://dev.onionsoft.net/mantis/</a></p>
 			</dd>
 			<dt>HSPWiKi（誰でも書き込めるHSPに関するWiKi）</dt>
 			<dd>
